--- a/dev-config/mysql/Dockerfile
+++ b/dev-config/mysql/Dockerfile
@@ -13,6 +13,6 @@ COPY my.cnf /etc/mysql/conf.d/my.cnf
 
 RUN chmod 0444 /etc/mysql/conf.d/my.cnf
 
-CMD ["mysqld"]
+CMD ["mysqld", "--mysql-native-password=ON"]
 
 EXPOSE 3306
