--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
         - https_proxy
         - no_proxy
     volumes:
-      - ./php-config/php.ini:/usr/local/etc/php/php.ini
+      - ./dev-config/php.ini:/usr/local/etc/php/php.ini
       - ./:/var/www
     expose:
       - '9000'
@@ -34,6 +34,9 @@ services:
       - MYSQL_USER=${DB_USERNAME}
       - MYSQL_PASSWORD=${DB_PASSWORD}
       - MYSQL_ROOT_PASSWORD=root
+    volumes:
+      - ./dev-config/data/mysql:/var/lib/mysql
+      - ./dev-config/mysql/docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
     networks:
       - backend
 
