--- a/dev-config/mysql/Dockerfile
+++ b/dev-config/mysql/Dockerfile
@@ -1,5 +1,4 @@
-ARG MYSQL_VERSION
-FROM mysql:${MYSQL_VERSION}
+FROM mysql:8.1
 
 #####################################
 # Set Timezone
@@ -13,6 +12,6 @@ COPY my.cnf /etc/mysql/conf.d/my.cnf
 
 RUN chmod 0444 /etc/mysql/conf.d/my.cnf
 
-CMD ["mysqld", "--mysql-native-password=ON"]
+CMD ["mysqld"]
 
 EXPOSE 3306
